@@ -192,6 +192,19 @@ struct grub_pxenv
   grub_uint32_t pxe_ptr;	/* SEG:OFF to !PXE struct.  */
 } __attribute__ ((packed));
 
+struct grub_pxe_bangpxe
+{
+  grub_uint8_t signature[4];
+#define GRUB_PXE_BANGPXE_SIGNATURE "!PXE"
+  grub_uint8_t length;
+  grub_uint8_t chksum;
+  grub_uint8_t rev;
+  grub_uint8_t reserved;
+  grub_uint32_t undiromid;
+  grub_uint32_t baseromid;
+  grub_uint32_t rm_entry;
+} __attribute__ ((packed));
+
 struct grub_pxenv_get_cached_info
 {
   grub_uint16_t status;
@@ -306,7 +319,7 @@ struct grub_pxenv_unload_stack
 
 int EXPORT_FUNC(grub_pxe_call) (int func, void * data, grub_uint32_t pxe_rm_entry);
 
-extern struct grub_pxenv *grub_pxe_pxenv;
+extern struct grub_pxe_bangpxe *grub_pxe_pxenv;
 
 void grub_pxe_unload (void);
 
